--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,12 @@
 <resources>
     <string name="app_name">My First App</string>
     <string name="user_name">Name</string>
+    <string name="address">Address</string>
+    <string name="phone_num">Phone Num.</string>
+    <string-array name="spinner">
+        <item>JANUARY</item>
+        <item>FEBRUARY</item>
+    </string-array>
+
 
 </resources>
