--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,13 @@
 <resources>
     <string name="app_name">My First App</string>
     <string name="user_name">Name</string>
+    <string name="email">Email</string>
     <string name="address">Address</string>
     <string name="phone_num">Phone Num.</string>
-    <string-array name="spinner">
-        <item>JANUARY</item>
-        <item>FEBRUARY</item>
-    </string-array>
 
+    <string name="info">INFORMATION</string>
+    <string name="button">REGISTER</string>
+    <string name="hint">Select Birthday Date</string>
 
 </resources>
+
